--- a/TechStore-api-gateway/package.json
+++ b/TechStore-api-gateway/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "apollo-datasource-rest": "^3.1.1",
         "apollo-server": "^3.1.2",
+        "dotenv": "^16.0.1",
         "graphql": "^15.5.1",
         "lodash": "^4.17.21",
         "node-fetch": "^2.6.1"
